force-app/main/default/objects/tdc_tsw__Message_Url__c/fields/tdc_tsw__Clicks__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Clicks__c</fullName>
    <label>Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>