force-app/main/default/objects/tdc_tsw__Message_Url__c/fields/tdc_tsw__First_Click__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__First_Click__c</fullName>
    <label>First Click</label>
    <type>DateTime</type>
</CustomField>