force-app/main/default/objects/tdc_tsw__Message_Url__c/fields/tdc_tsw__Last_Click_tz__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Last_Click_tz__c</fullName>
    <label>Last Click</label>
    <length>255</length>
    <type>Text</type>
</CustomField>