force-app/main/default/objects/tdc_tsw__Message_Url__c/fields/tdc_tsw__MessageId__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__MessageId__c</fullName>
    <label>MessageId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>