force-app/main/default/objects/tdc_tsw__Message_Url__c/fields/tdc_tsw__Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Related_Object_Id__c</fullName>
    <formula>tdc_tsw__SMS_History__r.tdc_tsw__Related_Object_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Object Id</label>
    <type>Text</type>
</CustomField>