force-app/main/default/objects/tdc_tsw__Message_Url__c/fields/tdc_tsw__SMS_History__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__SMS_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS History</label>
    <referenceTo>tdc_tsw__Message__c</referenceTo>
    <relationshipLabel>Message Urls</relationshipLabel>
    <relationshipName>Message_Urls</relationshipName>
    <type>Lookup</type>
</CustomField>