force-app/main/default/objects/tdc_tsw__Message_Url__c/fields/tdc_tsw__TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__TimeStamp__c</fullName>
    <label>TimeStamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>