force-app/main/default/objects/tdc_tsw__Message_Url__c/fields/tdc_tsw__UrlLink__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__UrlLink__c</fullName>
    <label>UrlLink</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>